--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "npm run pyodide:fetch && vite dev --host",
 		"build": "npm run pyodide:fetch && vite build",
-		"build:dev": "pnpm install && pnpm add -D tailwindcss@latest vite@^5.0.0 @sveltejs/vite-plugin-svelte@latest && pnpm run pyodide:fetch && vite build",
+		"build:dev": "pnpm install && pnpm add -D tailwindcss@latest vite@^5.0.0 @sveltejs/vite-plugin-svelte@latest paneforge@0.0.6 && pnpm run pyodide:fetch && vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -35,6 +35,7 @@
 		"eslint-plugin-cypress": "^3.4.0",
 		"eslint-plugin-svelte": "^2.43.0",
 		"i18next-parser": "^9.0.1",
+		"paneforge": "0.0.6",
 		"postcss": "^8.4.31",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
@@ -85,7 +86,6 @@
 		"katex": "^0.16.9",
 		"marked": "^9.1.0",
 		"mermaid": "^10.9.3",
-		"paneforge": "^0.0.6",
 		"panzoom": "^9.4.3",
 		"pnpm": "^9.15.1",
 		"prosemirror-commands": "^1.6.0",
