--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "npm run pyodide:fetch && vite dev --host",
 		"build": "npm run pyodide:fetch && vite build",
-		"build:dev": "pnpm install && pnpm add -D tailwindcss@latest vite@^5.0.0 @sveltejs/vite-plugin-svelte@latest paneforge@0.0.6 && pnpm run pyodide:fetch && vite build",
+		"build:dev": "pnpm install && pnpm add -D vite@^5.3.5 @sveltejs/vite-plugin-svelte@3.1.1 tailwindcss@latest paneforge@0.0.6 && pnpm run pyodide:fetch && vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -24,7 +24,7 @@
 		"@sveltejs/adapter-auto": "3.2.2",
 		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.5.20",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@sveltejs/vite-plugin-svelte": "3.1.1",
 		"@tailwindcss/typography": "^0.5.13",
 		"@typescript-eslint/eslint-plugin": "^6.17.0",
 		"@typescript-eslint/parser": "^6.17.0",
